Added delete and update

--- a/views/bestiary/index.ejs
+++ b/views/bestiary/index.ejs
@@ -1,10 +1,13 @@
 <%- include("../partials/htmlHead") %>
+<%- include("../partials/nav") %>
 
 <h1>The Bestiary</h1>
 <p>A collection of monsters!</p>
 
+<a href="/bestiary/new">Add a Monster</a>
+
 <ul>
   <% monsters.forEach(monster => { %>
-    <li><a href="/monsters/<%= monster._id %>"><%= monster.name %></a></li>
+    <li><a href="/bestiary/<%= monster._id %>"><%= monster.name %></a></li>
   <% })  %>
 </ul>
