--- a/views/bestiary/edit.ejs
+++ b/views/bestiary/edit.ejs
@@ -3,7 +3,29 @@
 
 <h1>Edit <%= monster.name %></h1>
 
-<form action="/bestiary/<%= monster._id %>?_method=PUT" method="POST">
+<form action="/bestiary/<%= monster._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+
+<label for="file">Upload a Photo</label>
+<div class="image-preview" file="<%= monster.file %>">
+  <input type="file" name="file" id="file"" accept="image/png, image/jpeg, image/jpg, img/svg">
+</div>
+
+<script>
+  const input = document.getElementById("file");
+  const imagePreview = document.querySelector(".image-preview");
+  if (imagePreview.hasAttribute("file")) {
+    const file = imagePreview.getAttribute("file");
+    imagePreview.style.backgroundImage = `url(/images/${file})`;
+  }
+
+  const updateImageDisplay = () => {
+    const imageUrl = URL.createObjectURL(input.files[0])
+    imagePreview.style.backgroundImage = `url(${imageUrl})`;
+  }
+
+  // Change event found in (https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/file)
+  input.addEventListener("change", updateImageDisplay)
+</script>
 
 <label for="name">Monster's Name</label>
 <input type="text" name="name" id="name" value="<%= monster.name %>" required>
