--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,19 @@
 <%- include("partials/htmlHead") %>
-<%- include("partials/nav") %>
+<%- include("partials/background") %>
 
-  <h1>Halloween</h1>
+<main>
+  <div id="title-container">
+    <a href="/bestiary"><p>Enter</p></a>
+    <h1>The Bestiary Compendium</h1>
+  </div>
+  <p class="align-bottom">A contemporary compendium of beasts and monsters through the ages.</p>
+  
+</main>
+
+
   
 </body>
+<footer>
+  <a href="https://www.freepik.com/free-photo/tiny-waterfall-creepy-dark-forest_7678482.htm#fromView=search&page=1&position=36&uuid=485f47f0-1314-4651-8d85-c41c528de02b&query=Haunted+cabin+foggy">Image by wirestock on Freepik</a>
+</footer>
 </html>
