--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
 <nav>
-  <a href="/">Beasts and Monsters</a>
-  <a href="/bestiary">Bestiary</a>
+  <a href="/bestiary" id="logo">The Bestiary Compendium</a>
+  <a href="/bestiary/new">Add a New Monster</a>
 </nav>
