--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -403,7 +403,7 @@ transition-delay: .35s;
 .lore {
   padding: 1.5rem 1rem 1.5rem;
   margin: 0;
-  text-align: center;
+  text-align: left;
   width: 100%;
 
   background-color: rgba(0,0,0,.25);
