--- a/views/bestiary/index.ejs
+++ b/views/bestiary/index.ejs
@@ -23,14 +23,14 @@
 <script>
   const monsters = document.querySelectorAll(".monster-card");
   const monsterCount = monsters.length;
-  const scrollSize = monsterCount * 50;
+  const scrollSize = monsterCount * 48;
 
   const scrollContainer = document.querySelector(".horizontal-scroll");
   const bestiaryList = document.querySelector(".bestiary-list");
 
-  scrollContainer.style.height = `${scrollSize}vh`;
-  bestiaryList.style.width = `${scrollSize}vw`;
-  document.documentElement.style.setProperty('--bestiary-width', `-${scrollSize + 40}vw`);
+  scrollContainer.style.height = `${scrollSize}rem`;
+  bestiaryList.style.width = `${scrollSize}rem`;
+  document.documentElement.style.setProperty('--bestiary-width', `-${scrollSize-20}rem`);
 
 </script>
 
